HybridIdentity-ADFSwithSQL-WAP-ADConnect-Multi-Site/linkedtemplates/UpdateNetworkSecurityGroup.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
    "networkSecurityGroupName": {
      "type": "string",
      "metadata": {
        "description": "VNet name"
      }
    }, 
    "LocalSubnet1": {
      "type": "string",
      "metadata": {
        "description": "Local Server Subnet"
      }
    },
    "LocalSubnet2": {
      "type": "string",
      "metadata": {
        "description": "Local Client Subnet"
      }
    },    
    "BastionSubnet": {
      "type": "string",
      "metadata": {
        "description": "Bastion Subnet"
      }
    },        
    "RemoteSubnet1": {
      "type": "string",
      "metadata": {
        "description": "Remote Server Subnet"
      }
    },    
    "RemoteSubnet2": {
      "type": "string",
      "metadata": {
        "description": "Remote Client Subnet"
      }
    },             
    "OCSPPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "OCSP Private IP Address"
      }
    },        
    "EXPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Exchange Private IP Address"
      }
    },
    "LocalWAPPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Web Application Proxy Private IP Address"
      }
    },     
    "RemoteWAPPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Remote WAP Private IP Address"
      }
    },                 
    "LocalADFSPrivateIP": {
      "type": "string",
      "metadata": {
        "description": "Local ADFS Private IP Address"
      }
    },         
    "location": {
        "type": "string",
        "metadata": {
          "description": "Region of Resources"
        }
      }
    },
    "resources": [
      {
        "apiVersion": "2019-04-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('networkSecurityGroupName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "HTTP",
              "properties": {
                "description": "Opens Port HTTP (Port 80/TCP)",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "[parameters('OCSPPrivateIP')]",
                "access": "Allow",
                "priority": 201,
                "direction": "Inbound"
              }
            },
            {
                "name": "HTTPS",
                "properties": {
                  "description": "Opens Port HTTPS (Port 443/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "access": "Allow",
                  "priority": 202,
                  "direction": "Inbound"
                }
            },
            {
                "name": "CERTAUTH",
                "properties": {
                  "description": "Opens Port CERTAUTH (Port 49443/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "49443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "access": "Allow",
                  "priority": 203,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "SMTP",
                "properties": {
                  "description": "Opens Port SMTP (Port 25/TCP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "25",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "[parameters('EXPrivateIP')]",
                  "access": "Allow",
                  "priority": 204,
                  "direction": "Inbound"
                }
            },
            {
                "name": "LocalWAP-to-LocalADFS",
                "properties": {
                  "description": "Allow Traffic from Local WAP to Local ADFS",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "destinationAddressPrefix": "[parameters('LocalADFSPrivateIP')]",
                  "access": "Allow",
                  "priority": 301,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "RemoteWAP-to-LocalADFS",
                "properties": {
                  "description": "Allow Traffic from WAP to Remote ADFS",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "[parameters('RemoteWAPPrivateIP')]",
                  "destinationAddressPrefix": "[parameters('LocalADFSPrivateIP')]",
                  "access": "Allow",
                  "priority": 302,
                  "direction": "Inbound"
                }
            },                        
            {
                "name": "Allow-LocalServer-to-LocalClient",
                "properties": {
                  "description": "Allow Traffic from Local Server to Local Client",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('LocalSubnet1') ]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet2')]",
                  "access": "Allow",
                  "priority": 400,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "Allow-LocalClient-to-LocalServer",
                "properties": {
                  "description": "Allow Traffic from Local Client to Local Server",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('LocalSubnet2')]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet1')]",
                  "access": "Allow",
                  "priority": 400,
                  "direction": "Outbound"
                }
            },                        
            {
                "name": "Allow-RemoteClient-to-LocalServer",
                "properties": {
                  "description": "Allow Traffic from Remote Client to Local Server",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('RemoteSubnet2') ]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet1')]",
                  "access": "Allow",
                  "priority": 500,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "Allow-LocalServer-to-RemoteClient",
                "properties": {
                  "description": "Allow Traffic from Local Server to Remote Client",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('LocalSubnet1')]",
                  "destinationAddressPrefix": "[parameters('RemoteSubnet2')]",
                  "access": "Allow",
                  "priority": 500,
                  "direction": "Outbound"
                }
            },                        
            {
                "name": "Allow-RemoteServer-to-LocalClient",
                "properties": {
                  "description": "Allow Traffic from Remote Server to Local Client",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('RemoteSubnet1') ]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet2')]",
                  "access": "Allow",
                  "priority": 600,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "Allow-LocalClient-to-RemoteServer",
                "properties": {
                  "description": "Allow Traffic from Local Client to Remote Server",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('LocalSubnet2')]",
                  "destinationAddressPrefix": "[parameters('RemoteSubnet1')]",
                  "access": "Allow",
                  "priority": 600,
                  "direction": "Outbound"
                }
            },                        
            {
                "name": "Allow-RemoteServer-to-LocalServer",
                "properties": {
                  "description": "Allow Traffic from Remote Server to Local Server",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('RemoteSubnet1')]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet1')]",
                  "access": "Allow",
                  "priority": 700,
                  "direction": "Inbound"
                }
            },            
            {
                "name": "Allow-LocalServer-to-RemoteServer",
                "properties": {
                  "description": "Allow Traffic from Local Server to Remote Server",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "[parameters('LocalSubnet1')]",
                  "destinationAddressPrefix": "[parameters('RemoteSubnet1')]",
                  "access": "Allow",
                  "priority": 700,
                  "direction": "Outbound"
                }
            },                        
            {
                "name": "Allow-Bastion-LocalServer",
                "properties": {
                  "description": "Allow Traffic from Bastion to Local Server",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "3389",
                  "sourceAddressPrefix": "[parameters('BastionSubnet')]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet1')]",
                  "access": "Allow",
                  "priority": 801,
                  "direction": "Inbound"
                }
            },                        
            {
                "name": "Allow-Bastion-LocalClient",
                "properties": {
                  "description": "Allow Traffic from Bastion to Local Client",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "3389",
                  "sourceAddressPrefix": "[parameters('BastionSubnet')]",
                  "destinationAddressPrefix": "[parameters('LocalSubnet2')]",
                  "access": "Allow",
                  "priority": 802,
                  "direction": "Inbound"
                }
            },                        
            {
                "name": "Allow-Bastion-LocalWAP",
                "properties": {
                  "description": "Allow Traffic from Bastion to Local Server",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "3390",
                  "sourceAddressPrefix": "[parameters('BastionSubnet')]",
                  "destinationAddressPrefix": "[parameters('LocalWAPPrivateIP')]",
                  "access": "Allow",
                  "priority": 803,
                  "direction": "Inbound"
                }
            },                                                
            {
                "name": "Deny-All-Inbound",
                "properties": {
                  "description": "Deny All Inbound Traffic",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 4000,
                  "direction": "Inbound"
                }
            },
            {
                "name": "Deny-All-Outbound",
                "properties": {
                  "description": "Deny All Outbound Traffic",
                  "protocol": "*",
                  "sourcePortRange": "*",
                  "destinationPortRange": "*",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Deny",
                  "priority": 4000,
                  "direction": "Outbound"
                }
            }            
          ]
        }
      }
    ]
  }
